# EMDB

./: manage.py  pyproject.toml
emdb/: settings.py  urls.py  wsgi.py
projects/: models.py
projects/migrations/: 0001_initial.py
