[tool.poetry]
name = "emdb"
version = "0.1.0"
description = ""
authors = ["codepanda <codepanda@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^2.2"
pypinyin = "^0.38.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
